# db-query-solution

./: .env.example  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: solution1.py  solution2.py
app/db/: config.py
app/db/models/: __init__.py  name.py
app/migrations/versions/: ff27520d987f_db_creation.py
