[tool.poetry]
name = "query-task"
version = "0.1.0"
description = ""
authors = ["alexey <ikea__@icloud.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"
psycopg = "^3.1.18"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
faker = "^25.0.1"
psycopg-binary = "^3.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
